<?xml version="1.0"?>
<package format="2">
  <name>trivial_controller</name>
  <version>0.0.1</version>
  <description>The trivial_controller package</description>
  <maintainer email="root@email.local">root</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roslint</build_depend>

  <depend>ackermann_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
